--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -11,12 +11,12 @@
     <link rel="stylesheet" href="css/welcome.css">
 
 <body>
-<div class="reveal">HELLO COOL-ADMIN V7.x</div>
+<div class="reveal">HELLO SHDEA-ADMIN</div>
 <!-- 添加底部说明 -->
 <div class="footer-bar">
-    <span>提示：系统为前后端分离模式，前端仓库地址</span>
-    <a class ="link" target="_blank" href="https://github.com/cool-team-official/cool-admin-vue">
-        https://github.com/cool-team-official/cool-admin-vue
+    <span>提示：上的(SHDEA)有限公司分离式项目</span>
+    <a class ="link" target="_blank" href="https://shdea-china.com">
+        https://shdea-china.com
     </a>
 </div>
 <script src="js/welcome.js"></script>
